--- a/Week3_Part3.ipynb
+++ b/Week3_Part3.ipynb
@@ -8248,7 +8248,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<font size='4'><b>Observations:</b> After trial and error (did not use elbow curve), k=3 deemed appropriate. Here, first cluster is dominated by significance presence of coffee shops which clearly indicates that this cluster is representing business powerhouse. Second cluster is almost ideal for health concious people barring considerable presence of winebars. Since Toronto often witnesses chilling cold, even that can be overlooked. Last cluster has only one borough but it is the perfect destination for entertainment seekers.  </font>"
+    "<font size='4'><b>Observations:</b> After trial and error (did not use elbow curve), k=3 deemed appropriate. Here, first cluster is dominated by significant presence of coffee shops which clearly indicates that this cluster is representing business powerhouse. Second cluster is almost ideal for health concious people barring considerable presence of winebars. Since Toronto often witnesses chilling cold, even that can be overlooked. Last cluster has only one borough but it is the perfect destination for entertainment seekers.  </font>"
    ]
   }
  ],
